# geoquery-rs

./: .gitignore  BIOCONDUCTOR_OBJECTS_TODO.md  CHANGES.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  REWRITE_NOTES.md  TEST_PARITY.md
.github/workflows/: cargo.yml  pages.yml
docs/: Gemfile  _config.yml  api.md  cookbook.md  examples.md  getting-started.md  index.md  publishing.md  r-mapping.md
docs/_data/: nav.yml
docs/_includes/: head.html
docs/_layouts/: default.html
docs/assets/css/: styles.css  syntax.css
src/: classes.rs  conversions.rs  error.rs  geo_file.rs  lib.rs  main.rs  parse_geo.rs  rnaseq.rs  search.rs  supp_files.rs
tests/: test_annotation_and_characteristics.rs  test_api_aliases.rs  test_fetch_gpl_false.rs  test_gds.rs  test_geo_browse.rs  test_geo_conversions.rs  test_geo_rnaseq.rs  test_gpl.rs  test_gse.rs  test_gsm.rs  test_search.rs  test_supp_files.rs
tests/common/: mod.rs
tests/fixtures/matrix/: repeated_characteristics_series_matrix.txt
tests/fixtures/platform/: duplicate_probes.gpl
tests/fixtures/soft/: malformed_gsm.soft  missing_headers.soft  truncated.soft
